# NebulaSurfer

./: .gitignore  CMakeLists.txt  LICENSE  NebulaSurfer.sln  NebulaSurfer.vcxproj  NebulaSurfer.vcxproj.filters  NebularSurfer.cpp  README.md  aHeaderFilewhichDefinesAStructAboutImGuiWindow.h  config.cpp  config.h  config.json  explorer.cpp  explorer.h  imgui.ini  network.cpp  network.h  shell.cpp  shell.h  ssh.h
dependencies/imgui/: imgui_demo.cpp
dependencies/libssh2/lib/: libssh2.exp  libssh2.lib
images/: licenses.txt
